<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    style="@style/GeoThemeWelcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_logo_dark_transp" />

        <TextView
            android:id="@+id/tvNadpis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/welcome__tv1"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvObsah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:maxLines="12"
            android:paddingTop="10dp"
            android:scrollbars="vertical"
            android:text="@string/welcome__tv2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnZacit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/welcome__button__pokracovat" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/posit"
                android:text="Overit lokaci"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
