<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false">

    <RelativeLayout
        style="@style/GeoThemeTaskQuiz"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/tvQtOtazka"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/infoQuestion"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_check_info"
            android:visibility="visible"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvQtOtazka"/>

        <RadioGroup
            android:id="@+id/rgQtOdpovedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_below="@+id/tvQtOtazka"
            >

            <RadioButton
                android:id="@+id/rb0"
                style="@style/GeoThemeRadioButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Moznost D neni k dispozici"/>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rgQtOdpovedi"
            android:layout_alignParentBottom="true"
            >
            <Button
                android:id="@+id/btnQtSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/btnQT_send"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnQtBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"
                android:text="@string/Prev"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnQtNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="50dp"
                android:text="@string/Next"
                android:visibility="invisible"/>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>